<resources>
    <string name="app_name">FarmArt</string>
    <string name="label_welcome">नमस्ते,</string>
    <string name="appFullName">FarmArt</string>
    <string name="appDesc">The \"Smart Farm\" System</string>
    <string name="username">Username *</string>
    <string name="password">Password *</string>
    <string name="enterusername">Enter Username</string>
    <string name="enterpassword">Enter Password</string>
    <string name="credits">Designed &amp; Developed By\n Lateral Praxis (India) Pvt. Ltd.</string>
    <string name="login">Login</string>
    <string name="show_password">Show Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_btn">Change Password</string>
    <string name="the_password_should_consists_of_">The password should consists of -</string>
    <string name="password_expired">Please change your password, as your previous password has already expired.</string>
    <string name="old_password">Current Password *</string>
    <string name="new_password">New Password *</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="show_password_all">Show All Passwords</string>
    <string name="enteroldpassword">Enter Old Password</string>
    <string name="enternewpassword">Enter New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="log_out_btn">Log Out</string>
    <string name="password_hint_">Enter Password *</string>
    <string name="refresh">Sync Data</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="lang_eng">English</string>
    <string name="lang_hindi">हिंदी</string>
    <string name="label_createFarmer">Create Farmer</string>
    <string name="label_editFarmer">Edit Farmer</string>
    <string name="label_viewFarmer">View Farmer</string>
    <string name="label_farmerName">Farmer Name</string>
    <string name="label_fatherName">Father / Husband Name</string>
    <string name="label_otherData">Other Data</string>
    <string name="label_address">Address</string>
    <string name="label_bankDetails">Bank Details</string>
    <string name="label_fatherDetails">Farmer Details</string>
    <string name="label_contactDetails">Contact Details</string>
    <string name="label_addPoaPoi">Add POA / POI Documents</string>
    <string name="label_addressDetails">Address Details</string>
    <string name="label_bankDetail">Bank Details</string>
    <string name="label_fssaiDetail">FSSAI Details</string>
    <string name="label_language">Language *</string>
    <string name="label_otherDetails">Other Datails</string>
    <string name="label_farmerPhoto">Photo</string>
    <string name="label_operationalBlocks">Operating Blocks</string>
    <string name="label_Add">Add</string>
    <string name="label_district">District</string>
    <string name="label_block">Block</string>
    <string name="label_addblock">Farm Block</string>
    <string name="label_updateFarmer">Update Farmer</string>
    <string name="label_familyDetails">Family Details</string>
    <string name="label_loanDetails">Loan Details</string>
    <string name="label_assetDetails">Asset Details</string>
    <string name="label_bankPhoto">Bank Photo</string>
    <string name="label_fssaiPhoto">FSSAI Photo</string>
    <string name="label_PoaPoi">POA / POI Documents</string>
    <string name="label_plantation">Plantation</string>
    <string name="label_interCropping">Inter Cropping</string>
    <string name="label_addPlantation">Add Plantation</string>
    <string name="label_viewPlantation">View Plantation</string>
    <string name="label_addInterCropping">Add Inter Cropping</string>
    <string name="label_viewInterCropping">View Inter Cropping</string>
    <string name="label_addNurseryInterCropping">Add Nursery Inter Cropping</string>
    <string name="label_viewNurseryInterCropping">View Nursery Inter Cropping</string>
    <string name="datalabel_salutation">Salutation</string>
    <string name="datalabel_firstName">First Name</string>
    <string name="datalabel_middleName">Middle Name</string>
    <string name="datalabel_lastName">Last Name</string>
    <string name="datalabel_fullName">Name</string>
    <string name="datalabel_gender">Gender</string>
    <string name="datalabel_birthDate">Birthdate</string>
    <string name="datalabel_mobile">Mobile</string>
    <string name="datalabel_alternate1">Alternate 1</string>
    <string name="datalabel_alternate2">Alternate 2</string>
    <string name="datalabel_farmerType">Farmer Types</string>
    <string name="datalabel_educationLevel">Education Level</string>
    <string name="datalabel_addressType">Address Type</string>
    <string name="datalabel_addressStreet1">Line 1</string>
    <string name="datalabel_addressStreet2">Line 2</string>
    <string name="datalabel_state">State</string>
    <string name="datalabel_district">District</string>
    <string name="datalabel_block">Block</string>
    <string name="datalabel_panchayat">Panchayat</string>
    <string name="datalabel_village">Village</string>
    <string name="datalabel_city">City</string>
    <string name="datalabel_pinCode">Pincode</string>
    <string name="datalabel_fatherName">Father / Husband Name</string>
    <string name="datalabel_first">First *</string>
    <string name="datalabel_middle">Middle</string>
    <string name="datalabel_last">Last *</string>
    <string name="datalabel_soiltype">Soil Type</string>
    <string name="datalabel_irrigation">Irrigation System</string>
    <string name="datalabel_river">River</string>
    <string name="datalabel_dam">Dam</string>
    <string name="datalabel_waterSource">Water Source</string>
    <string name="datalabel_electricitySource">Elec. Source</string>
    <string name="datalabel_farmerCode">Code</string>
    <string name="datalabel_farmerName">Farmer</string>
    <string name="datalabel_father">Father</string>
    <string name="datalabel_mobileNo">Mobile</string>
    <string name="datalabel_address">Address</string>
    <string name="datalabel_accountNo">Account #</string>
    <string name="datalabel_bankName">Bank Name</string>
    <string name="label_uploadPassbook">Upload Passbook</string>
    <string name="datalabel_farmBlockList">Farm Block List</string>
    <string name="datalabel_farmBlockCode">FB Code</string>
    <string name="datalabel_farmBlockPlantationCode">PL Code</string>
    <string name="datalabel_DocumentType">Type *</string>
    <string name="datalabel_DocumentName">Name *</string>
    <string name="datalabel_DocumentNumber">Number *</string>
    <string name="datalabel_NoRecord">No Record(s) Found.</string>
    <string name="datalabel_Add">Add</string>
    <string name="datalabel_Reset">Reset</string>
    <string name="datalabel_Save">Save</string>
    <string name="datalabel_Submit">Submit</string>
    <string name="datalabel_Next">Next</string>
    <string name="datalabel_NA">Not Applicable</string>
    <string name="datalabel_Code">Code</string>
    <string name="datalabel_Type">Type</string>
    <string name="datalabel_TypeHead">Type *</string>
    <string name="label_languageHead">Language</string>
    <string name="label_gender">Gender</string>
    <string name="label_birthdate">Birth Date</string>
    <string name="label_birthdate_create">Birth Date *</string>
    <string name="label_edulevel">Education</string>
    <string name="label_totalAcreage">Total Acre</string>
    <string name="label_emailhead">Email Id</string>
    <string name="label_mobilehead">Mobile#</string>
    <string name="label_athead">Alternate#</string>
    <string name="label_street1head">Line 1</string>
    <string name="label_street2head">Line 2</string>
    <string name="label_statehead">State</string>
    <string name="label_districthead">District</string>
    <string name="label_blockhead">Block</string>
    <string name="label_panchayathead">Panchayat</string>
    <string name="label_villagehead">Village</string>
    <string name="label_pincodehead">Pincode</string>
    <string name="label_cityhead">City</string>
    <string name="label_accounthead">Account#</string>
    <string name="label_ifschead">IFSC</string>
    <string name="label_fssaihead">FSSAI#</string>
    <string name="label_regdatehead">Registration Date</string>
    <string name="label_relationship">Relationship *</string>
    <string name="label_Nominee">Nominee</string>
    <string name="label_source">Source *</string>
    <string name="label_loan_source">Loan Source *</string>
    <string name="label_loanType">Loan Type *</string>
    <string name="label_loanAmt">Loan Amt *</string>
    <string name="label_balAmt">Bal Amt *</string>
    <string name="label_tenure">Tenure *</string>
    <string name="label_ROI">ROI(%) *</string>
    <string name="label_prospective">Prospective</string>
    <string name="label_Name">Name *</string>
    <string name="label_NameHead">Farmer</string>
    <string name="label_chooseFile">Choose File</string>
    <string name="label_takePhoto">Take Photo</string>
    <string name="label_selectDate">Select Date</string>
    <string name="farmercreatehead">Create Farmer</string>
    <string name="salutation">Salutation *</string>
    <string name="firstnamehead">First Name *</string>
    <string name="middlenamehead">Middle Name</string>
    <string name="lastnamehead">Last Name *</string>
    <string name="mobilehead">Mobile# *</string>
    <string name="emailhead">Email Id</string>
    <string name="athead">Alternate#</string>
    <string name="addresstype">Address *</string>
    <string name="districtwise">District</string>
    <string name="citywise">City</string>
    <string name="statehead">State *</string>
    <string name="districthead">District *</string>
    <string name="blockhead">Block *</string>
    <string name="panchayathead">Panchayat *</string>
    <string name="villagehead">Village *</string>
    <string name="pincodehead">Pincode *</string>
    <string name="cityhead">City *</string>
    <string name="accounthead">Account#</string>
    <string name="ifschead">IFSC</string>
    <string name="street1head">Line 1 *</string>
    <string name="street2head">Line 2 </string>
    <string name="farmer_photo">Upload Photo *</string>
    <string name="gender">Gender *</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="label_login">Login</string>
    <string name="label_logout">Logout</string>
    <string name="label_linkAdd">Add [ + ]</string>
    <string name="label_changePassword">Change Password</string>
    <string name="label_showPassword">Show Password</string>
    <string name="label_showAllPassword">Show All Password</string>
    <string name="label_forgotPassword">Forgot Password</string>
    <string name="label_userLogin">User Login</string>
    <string name="hint_enterUsername">Enter Username</string>
    <string name="hint_enterPassword">Enter Password</string>
    <string name="hint_enterCurrentPassword">Enter Current Password</string>
    <string name="hint_enterNewPassword">Enter New Password</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="label_farmBlock">Farm Block</string>
    <string name="type">Type</string>
    <string name="back">Back</string>
    <string name="label_unplActivity">Unplanned Activity</string>
    <string name="label_Plantation">Plantation</string>
    <string name="label_unplannedactlist">Unplanned Activity List</string>
    <string name="datalabel_NurseryMandatory">Nursery *</string>
    <string name="datalabel_NurseryZone">Zone</string>
    <string name="datalabel_Nursery">Nursery</string>
    <string name="main">Main</string>
    <string name="mini">Mini</string>
    <string name="zone">Zone *</string>
    <string name="selectNursery">Select Nursery</string>
</resources>