<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/style_topBar1"
            android:text="@string/label_changePassword"
            android:textAllCaps="true" />


        <TextView
            android:id="@+id/tvPasswordExpired"
            style="@style/style_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:gravity="center"
            android:text="@string/password_expired"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <LinearLayout
            style="@style/style_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:orientation="vertical">

            <TextView
                style="@style/style_sectionHead"
                android:text="@string/label_changePassword" />

            <EditText
                android:id="@+id/etUsername"
                style="@style/style_dataField"
                android:hint="@string/hint_enterUsername"
                android:visibility="gone"
                android:inputType="text"
                android:maxLength="50" />

            <EditText
                android:id="@+id/etOldPassword"
                style="@style/style_dataField"
                android:hint="@string/hint_enterCurrentPassword"
                android:inputType="textPassword"
                android:maxLength="50" />

            <EditText
                android:id="@+id/etNewPassword"
                style="@style/style_dataField"
                android:hint="@string/hint_enterNewPassword"
                android:inputType="textPassword"
                android:maxLength="50" />


            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/style_dataField"
                android:hint="@string/hint_confirmPassword"
                android:inputType="textPassword"
                android:maxLength="50" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_showAllPassword"
                    android:textColor="@color/colorBlack" />

                <CheckBox
                    android:id="@+id/ckShowPass"
                    style="Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:focusable="false" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvInstructionsHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:gravity="center"
                android:text="@string/the_password_should_consists_of_"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dip"
                android:textColor="@color/colorBlack"
                android:textIsSelectable="false" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded">


                <Button
                    android:id="@+id/btnLogout"
                    style="@style/style_nextButton"
                    android:text="@string/label_logout" />

                <Button
                    android:id="@+id/btnChangePassword"
                    style="@style/style_nextButton"
                    android:text="@string/label_changePassword" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>