<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        style="@style/style_topBar1"
        android:text="@string/selectNursery"
        android:textAllCaps="true" />

    <LinearLayout
        style="@style/style_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/style_dataLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="@string/datalabel_TypeHead" />


            <RadioGroup
                android:id="@+id/radioType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="horizontal"
                android:paddingLeft="4dp"
                android:textColor="@color/colorBlack">

                <RadioButton
                    android:id="@+id/radioMain"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/main" />

                <RadioButton
                    android:id="@+id/radioMini"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mini" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="2dp"
            android:weightSum="1">

            <TextView
                style="@style/style_dataLabel"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:inputType="none"
                android:text="@string/datalabel_NurseryMandatory" />

            <Spinner
                android:id="@+id/spNursery"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="0.6"
                android:paddingLeft="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                style="@style/style_dataLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:inputType="none"
                android:text="@string/zone" />

            <Spinner
                android:id="@+id/spNurseryZone"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="0.60"
                android:paddingLeft="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:weightSum="1">

            <Button
                android:id="@+id/btnBack"
                style="@style/style_backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/back" />

            <Button
                android:id="@+id/btnNext"
                style="@style/style_nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/datalabel_Next" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
