<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        style="@style/style_topBar1"
        android:text="@string/label_unplActivity"
        android:textAllCaps="true" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_above="@+id/footer"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="2dp"
                    android:weightSum="1">

                    <TextView
                        style="@style/style_dataLabel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:text="@string/type" />

                    <TextView
                        android:id="@+id/tvType"
                        style="@style/style_dataField"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:text="@string/datalabel_farmerName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="2dp"
                    android:weightSum="1">

                    <TextView
                        style="@style/style_dataLabel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:text="@string/datalabel_Nursery" />


                    <TextView
                        android:id="@+id/tvNursery"
                        style="@style/style_dataField"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:text="@string/label_farmBlock" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="2dp"
                    android:weightSum="1">

                    <TextView
                        style="@style/style_dataLabel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:text="@string/datalabel_NurseryZone" />

                    <TextView
                        android:id="@+id/tvNurseryZone"
                        style="@style/style_dataField"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:text="@string/label_farmBlock" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        style="@style/style_dataLabel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:text="@string/label_Plantation" />

                    <TextView
                        android:id="@+id/tvPlantation"
                        style="@style/style_dataField"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:inputType="none"
                        android:text="@string/label_Plantation" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        style="@style/style_sectionHead"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:text="@string/label_unplannedactlist" />

                    <TextView
                        android:id="@+id/linkAdd"
                        style="@style/style_link"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0.3"
                        android:autoLink="all"
                        android:clickable="true"
                        android:gravity="end"
                        android:linksClickable="true"
                        android:text="@string/label_linkAdd" />
                </LinearLayout>

            <TextView
                android:id="@+id/tvEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/datalabel_NoRecord"
                android:textColor="@color/colorBlack" />

            <lateralpraxis.lpsmartfarm.NonScrollableListView
                android:id="@+id/lvUnPlannedActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/colorGold"
                android:dividerHeight="1sp"
                android:paddingLeft="2sp"></lateralpraxis.lpsmartfarm.NonScrollableListView>
            <View
                android:id="@+id/tvDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGold" />
        </LinearLayout>
    </ScrollView>
        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5sp"
                android:paddingBottom="4sp"
                android:weightSum="1">

                <Button
                    android:id="@+id/btnBack"
                    style="@style/style_backButton"
                    android:layout_gravity="end"
                    android:layout_weight="0.5"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/style_nextButton"
                    android:layout_gravity="end"
                    android:layout_weight="0.5"
                    android:text="@string/datalabel_Save"
                    android:visibility="visible" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
